removed user pin encrypt check
